--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,14 @@
 <app-sidenav></app-sidenav>
-<div class="d-flex w-100 h-100 justify-content-center align-items-center">
-  <app-label-list></app-label-list>
+<div class="w-100 h-100 d-flex flex-column align-items-center justify-content-center">
+    <mat-form-field class="position-absolute">
+      <mat-label>Select the Project</mat-label>
+      <mat-select>
+        <mat-option *ngFor="let project of projects" [value]="project.id">
+          {{ project.name }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <ng-container>
+      <app-label-list [projectId]="selectedProjectId" *ngIf="function == 'LIST'"></app-label-list>
+    </ng-container>
 </div>
