--- a/src/app/function/label-list/label-list.component.html
+++ b/src/app/function/label-list/label-list.component.html
@@ -1,28 +1,39 @@
 <div class="d-flex justify-content-center align-items-center flex-column">
-  <h2>
+  <h2 class="mb-3">
     Label List
   </h2>
-  <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-    <!-- Column Definitions -->
-    <ng-container matColumnDef="position">
-      <mat-header-cell *matHeaderCellDef> Position </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.position}} </mat-cell>
-    </ng-container>
+  <div class="table-container">
+    <mat-table [dataSource]="dataSource" class="mat-elevation-z8 custom-table">
+      <!-- Column Definitions -->
+      <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
+        <mat-header-cell *matHeaderCellDef> {{ getColumnLabel(column) }} </mat-header-cell>
+        <mat-cell *matCellDef="let element">
+          <!-- Display actions buttons in the 'actions' column -->
+          <ng-container *ngIf="column === 'actions'">
+            <button mat-icon-button (click)="copyRow(element)">
+              <mat-icon>content_copy</mat-icon>
+            </button>
+            <button mat-icon-button (click)="editRow(element)">
+              <mat-icon>edit</mat-icon>
+            </button>
+            <button mat-icon-button (click)="deleteRow(element)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </ng-container>
+          <!-- Display regular cell data -->
+          <ng-container *ngIf="column !== 'actions'">
+            {{ element[column] }}
+          </ng-container>
+        </mat-cell>
+      </ng-container>
 
-    <ng-container matColumnDef="name">
-      <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
-    </ng-container>
+      <!-- Header Row -->
+      <mat-header-row class="mat-header-row" *matHeaderRowDef="displayedColumns"></mat-header-row>
 
-    <ng-container matColumnDef="weight">
-      <mat-header-cell *matHeaderCellDef> Weight </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.weight}} </mat-cell>
-    </ng-container>
+      <!-- Data Rows -->
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
 
-    <!-- Header Row -->
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+  </div>
 
-    <!-- Data Rows -->
-    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-  </mat-table>
 </div>
