--- a/src/styles.scss
+++ b/src/styles.scss
@@ -263,18 +263,21 @@ $altTheme: (
 
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;700&display=swap');
 @import "bootstrap/dist/css/bootstrap.min.css";
-
+//
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 body{
   font-family: 'Oswald', sans-serif;
-  position: relative;
   background-color: #2c2c2c;
   color: #fff;
 }
 
+.function_container{
+
+}
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
