--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,17 @@
-<app-sidenav></app-sidenav>
-<div class="container-fluid h-100 ml-3">
-  <div class="container h-100 bg-danger">
-    <div class="row">
-      <div class="col">
-          title
+<div class="d-flex w-100 h-100">
+  <app-sidenav></app-sidenav>
+  <div class="w-100">
+      <div class="d-flex w-100 align-items-center p-4 justify-content-between">
+        <h2>Titulo da Função</h2>
+        <select [(ngModel)]="selectedProjectId" (ngModelChange)="onProjectChange()">
+          <option *ngFor="let project of projects" [value]="project.id">
+            {{ project.name }}
+          </option>
+        </select>
       </div>
-      <div class="col">
-          <select [(ngModel)]="selectedProjectId" (ngModelChange)="onProjectChange()">
-            <option *ngFor="let project of projects" [value]="project.id">
-              {{ project.name }}
-            </option>
-          </select>
+      <div class="function-container">
+        <app-label-list [projectId]="selectedProjectId" *ngIf="function == 'LIST'"></app-label-list>
+        <app-create *ngIf="function == 'CREATE'"></app-create>
       </div>
-    </div>
-    <div class="row">
-      <app-label-list [projectId]="selectedProjectId" *ngIf="function == 'LIST'"></app-label-list>
-      <app-create *ngIf="function == 'CREATE'"></app-create>
-    </div>
   </div>
 </div>
