--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,3 +18,11 @@
   height: auto;
   background-color: #75b068;
 }
+
+.function-container{
+  width: 100%;
+  height: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
