--- a/src/app/function/label-list/label-list.component.scss
+++ b/src/app/function/label-list/label-list.component.scss
@@ -1,6 +1,6 @@
 .custom-table {
   max-height: 500px; /* Ajuste a altura máxima conforme necessário */
-  width: 100%;
+  width: 75vw;
   overflow-y: auto;
   text-align: center;
 
