--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -5,7 +5,7 @@
   box-shadow: inset -5px 0 10px -1px rgba(1, 4, 10, 0.5);
   .image-container{
     width: 100%;
-    height: 25%;
+    height: 95px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -32,7 +32,6 @@
 }
 .logo{
   transform: scale(0.3);
-  margin-bottom: 5rem;
 }
 .row_about{
   background-color: #da3544;
