--- a/src/app/function/exchange/exchange.component.scss
+++ b/src/app/function/exchange/exchange.component.scss
@@ -6,6 +6,12 @@
   text-align: center;
 }
 
+.title_head{
+  width: 100%;
+  height: 3.5rem;
+  background-color: #1f1e21;
+}
+
 
 ::-webkit-scrollbar {
   width: 10px;
