Criada tela "Create"

--- a/src/app/function/create/create.component.html
+++ b/src/app/function/create/create.component.html
@@ -1,5 +1,16 @@
-<div class="mat-elevation-z8 create-container">
-  <div class="title_head">
+<div class="container-fluid mat-elevation-z8 create-container">
+  <div class="row title_head d-flex align-items-center justify-content-evenly">
+    <div class="col-5 bg-danger">
+      <h2>Entrada</h2>
+    </div>
+    <div class="col bg-black">
+      <h2>Saída</h2>
+    </div>
+    <div class="col-2 bg-light">
+      <button mat-raised-button>Criar</button>
+    </div>
+  </div>
+  <div class="row h-25 bg-danger flex-fill">
 
   </div>
 </div>
