--- a/src/app/function/about/about.component.html
+++ b/src/app/function/about/about.component.html
@@ -1,3 +1,28 @@
 <div class="mat-elevation-z8 create-container">
-  ua
+  <div class="title_head">Sobre o Projeto</div>
+  <p>O <strong>Label Creator</strong> é uma ferramenta desenvolvida por Kae e Menezes, projetada para tornar a criação
+    de labels e traduções mais rápida e eficiente. Nosso objetivo é simplificar o processo de localização de projetos,
+    permitindo que você crie traduções de maneira automática e organizada.</p>
+
+  <h2>Principais recursos do Label Creator:</h2>
+  <ul>
+    <li><strong>Tradução Automática:</strong> Com o Label Creator, enviar uma palavra para tradução é simples. Basta
+      inserir a palavra em um idioma e obter instantaneamente a tradução correspondente. Essa tradução é então
+      automaticamente enviada para o banco de dados, garantindo que suas traduções estejam sempre atualizadas.
+    </li>
+    <li><strong>Tradução de HTML:</strong> Simplifique a tradução de elementos HTML em seus projetos. Envie blocos de
+      código HTML com palavras a serem traduzidas, e o Label Creator substituirá essas palavras pelo equivalente
+      traduzido, mantendo a estrutura do seu HTML intacta.
+    </li>
+    <li><strong>Geração de Comandos SQL:</strong> O Label Creator oferece a conveniência de gerar comandos SQL para
+      facilitar a comparação entre o banco de dados de desenvolvimento e o banco de dados de produção. Isso permite que
+      você identifique rapidamente quais labels estão ausentes no banco de desenvolvimento e as adicione conforme
+      necessário.
+    </li>
+  </ul>
+
+  <p>O <strong>Label Creator</strong> é uma ferramenta poderosa para equipes de desenvolvimento e localização, ajudando
+    a agilizar a criação e gerenciamento de labels e traduções. Simplifique seu fluxo de trabalho e mantenha suas
+    traduções organizadas e atualizadas com o Label Creator.</p>
+
 </div>
