--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -15,7 +15,7 @@
     <div class="row text-center w-100 menu_item" (click)="selectFunction('MYSQL')">
       <p class="mt-2">Gerar MySQL</p>
     </div>
-    <div class="row text-center position-absolute w-100 row_about" (click)="selectFunction('MYSQL')">
+    <div class="row text-center position-absolute w-100 row_about" (click)="selectFunction('ABOUT')">
       <p class="mt-2">Sobre o projeto</p>
     </div>
   </div>
