--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <div class="w-100">
       <div class="d-flex w-100 align-items-center p-3 justify-content-between">
         <h2>{{translateFunctionName()}}</h2>
-        <select [(ngModel)]="selectedProjectId" (ngModelChange)="onProjectChange()">
+        <select [(ngModel)]="selectedProjectId" (ngModelChange)="onProjectChange()" class="select">
           <option *ngFor="let project of projects" [value]="project.id">
             {{project.name}}
           </option>
@@ -14,6 +14,7 @@
         <app-create *ngIf="function == 'CREATE'"></app-create>
         <app-exchange *ngIf="function == 'EXCHANGE'"></app-exchange>
         <app-mysql *ngIf="function == 'MYSQL'"></app-mysql>
+        <app-about *ngIf="function == 'ABOUT'"></app-about>
       </div>
   </div>
 </div>
