--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,20 @@
 
-.function-container{
+.function-container {
   width: 100%;
   height: 85%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.select {
+  width: 200px;
+  height: 40px;
+  background: #4B4D52;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  color: #FFFFFF;
+  border: none;
+  outline: none;
 }
