--- a/src/app/function/label-list/label-list.component.html
+++ b/src/app/function/label-list/label-list.component.html
@@ -5,7 +5,7 @@
     <mat-cell *matCellDef="let element">
       <!-- Display actions buttons in the 'actions' column -->
       <ng-container *ngIf="column === 'actions'">
-        <button mat-icon-button (click)="copyRow(element)">
+        <button mat-icon-button [cdkCopyToClipboard]="copyRow(element)">
           <mat-icon>content_copy</mat-icon>
         </button>
         <button mat-icon-button (click)="editRow(element)">
