--- a/src/app/function/mysql/mysql.component.html
+++ b/src/app/function/mysql/mysql.component.html
@@ -1,7 +1,14 @@
-<div class="mat-elevation-z8 create-container">
-  <div class="title_head">
+<div class="mat-elevation-z8 create-container d-flex flex-row align-items-center">
+  <div class="container h-100 w-25 ">
+    <div class="row d-flex align-items-center justify-content-around">
+      <button mat-raised-button class="mt-3 custom_button" (click)="generateSql()">Gerar SQL</button>
+    </div>
+    <div class="row d-flex align-items-center justify-content-around">
+      <button mat-raised-button class="mt-3 custom_button" (click)="generateSql()">Copiar</button>
+    </div>
   </div>
-  <textarea readonly [value]="sqlResponse"></textarea>
-  <p *ngIf="!hasLabel">Aviso: {{message}}</p>
-  <button (click)="generateSql()">Gerar SQL</button>
+  <div class="h-100 w-75 ">
+    <textarea readonly [value]="sqlResponse" class="output mt-3"></textarea>
+    <p *ngIf="!hasLabel">Aviso: {{message}}</p>
+  </div>
 </div>
