--- a/src/app/function/mysql/mysql.component.scss
+++ b/src/app/function/mysql/mysql.component.scss
@@ -5,14 +5,16 @@
   overflow-y: auto;
   text-align: center;
 }
-
-.title_head{
-  width: 100%;
-  height: 3.5rem;
-  background-color: #1f1e21;
+.output{
+  resize: none;
+  outline: none;
+  width: 90%;
+  height: 90%;
+  background-color: #f2f2f2;
 }
-
-
+.custom_button{
+  width: 10rem;
+}
 ::-webkit-scrollbar {
   width: 10px;
 }
