--- a/src/app/function/mysql/mysql.component.scss
+++ b/src/app/function/mysql/mysql.component.scss
@@ -5,16 +5,26 @@
   overflow-y: auto;
   text-align: center;
 }
-.output{
+
+.output {
   resize: none;
   outline: none;
   width: 90%;
   height: 90%;
-  background-color: #f2f2f2;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  padding: 15px;
+  color: #fff;
 }
-.custom_button{
+
+.custom_button {
   width: 10rem;
 }
+
 ::-webkit-scrollbar {
   width: 10px;
 }
