--- a/src/app/utils/notification/notification.component.html
+++ b/src/app/utils/notification/notification.component.html
@@ -1,1 +1,9 @@
-<p>notification works!</p>
+<div class="dialog">
+  <h2 mat-dialog-title>Aviso</h2>
+  <mat-dialog-content class="dialog-content">
+    <p>Deu Erro Mané</p>
+  </mat-dialog-content>
+  <mat-dialog-actions align="end" class="d-flex justify-content-between mt-1">
+    <button mat-raised-button [mat-dialog-close]="true" color="warn">Fechar</button>
+  </mat-dialog-actions>
+</div>
