--- a/src/app/function/create/create.component.scss
+++ b/src/app/function/create/create.component.scss
@@ -11,20 +11,42 @@
   height: 95%;
   resize: none;
   font-size: 24px;
+  color: #FFFFFF;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  padding: 15px;
 }
 .output_textarea{
   width: 100%;
   height: 12.6rem;
   resize: none;
-  color: mediumspringgreen;
+  color: #00FFA3;
   font-size: 24px;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  padding: 15px;
 }
 .output_textarea_2{
   width: 100%;
   height: 12.6rem;
   resize: none;
-  color: mediumspringgreen;
+  color: #ff6d78;
   font-size: 24px;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  padding: 15px;
 }
 .create_content{
   height: 88%;
