Mudanças no textarea da tela "create"

--- a/src/app/function/create/create.component.html
+++ b/src/app/function/create/create.component.html
@@ -22,10 +22,10 @@
 
       <div class="col h-100 mt-2">
         <div class="container-fluid">
-          <textarea class="output_textarea" placeholder="Labels criadas..." [value]="approved"></textarea>
+          <textarea class="output_textarea" readonly placeholder="Labels criadas..." [value]="approved"></textarea>
         </div>
         <div class="container-fluid mt-2">
-          <textarea class="output_textarea_2" placeholder="Labels que já existem..." [value]="approved"></textarea>
+          <textarea class="output_textarea_2" readonly placeholder="Labels que já existem..." [value]="approved"></textarea>
         </div>
       </div>
     </div>
