--- a/src/app/function/create/create.component.scss
+++ b/src/app/function/create/create.component.scss
@@ -38,7 +38,7 @@
   width: 100%;
   height: 12.6rem;
   resize: none;
-  color: #ff6d78;
+  color: #f1222e;
   font-size: 24px;
   background: rgba(255, 255, 255, 0.2);
   border-radius: 16px;
