--- a/src/app/function/mysql/mysql.component.scss
+++ b/src/app/function/mysql/mysql.component.scss
@@ -1,8 +1,6 @@
 .create-container {
-  max-height: 500px; /* Ajuste a altura máxima conforme necessário */
-  height: 40rem;
+  height: 500px;
   width: 75vw;
-  overflow-y: auto;
   text-align: center;
 }
 
