--- a/src/app/function/create/create.component.html
+++ b/src/app/function/create/create.component.html
@@ -17,7 +17,7 @@
 
       </div>
       <div class="col h-100 mt-2">
-        <textarea class="input_textarea" placeholder="Digite aqui os nomes de labels que você deseja criar..." [value]="approved"></textarea>
+        <textarea class="input_textarea" placeholder="Digite aqui os nomes de labels que você deseja criar..." [(ngModel)]="inputLabels" name="quotes"></textarea>
       </div>
 
       <div class="col h-100 mt-2">
