--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,6 +14,14 @@
   font-style: normal;
   font-weight: 500;
   color: #FFFFFF;
-  border: none;
   outline: none;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 5px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  option{
+    color: #000;
+  }
 }
