--- a/src/app/function/exchange/exchange.component.html
+++ b/src/app/function/exchange/exchange.component.html
@@ -12,7 +12,7 @@
     <div class="row create_content">
       <div class="col-2 h-100">
         <div class="row d-flex mt-3 align-items-center justify-content-around">
-          <button mat-raised-button class="custom_button">Substituir</button>
+          <button mat-raised-button class="custom_button" (click)="replaceHtml()">Substituir</button>
         </div>
 
       </div>
