--- a/src/styles.scss
+++ b/src/styles.scss
@@ -280,3 +280,9 @@ body{
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Oswald, "Helvetica Neue", sans-serif; }
+
+textarea{
+  resize: none;
+  outline: none;
+  border: none;
+}
