--- a/src/app/function/mysql/mysql.component.html
+++ b/src/app/function/mysql/mysql.component.html
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="h-100 w-75 ">
-    <textarea readonly [value]="sqlResponse" class="output mt-3"></textarea>
+    <textarea readonly [value]="sqlResponse" placeholder="Gerar comando SQL do projeto..." class="output mt-3"></textarea>
     <p *ngIf="!hasLabel">Aviso: {{message}}</p>
   </div>
 </div>
