--- a/src/app/function/mysql/mysql.component.scss
+++ b/src/app/function/mysql/mysql.component.scss
@@ -15,6 +15,7 @@
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   border: 1px solid rgba(255, 255, 255, 0.3);
+  font-size: 24px;
   padding: 15px;
   color: #fff;
 }
