Ajuste no copyRow da nova tabela

--- a/src/app/function/label-list/label-list.component.html
+++ b/src/app/function/label-list/label-list.component.html
@@ -3,31 +3,35 @@
     <div class="col">
 <!--      table-header-->
       <div class="row table_header">
-        <div class="col d-flex text-center align-items-center justify-content-around">
-          teste
+        <div class="col-2 d-flex text-center align-items-center justify-content-around">
+          Data
+        </div>
+        <div class="col bg-dark d-flex text-center align-items-center justify-content-around">
+          Key
         </div>
         <div class="col d-flex text-center align-items-center justify-content-around">
-          teste
+          Value
         </div>
-        <div class="col d-flex text-center align-items-center justify-content-around">
-          teste
+        <div class="col-2 bg-dark d-flex text-center align-items-center justify-content-around">
+          search
         </div>
       </div>
 <!--      table content-->
       <div class="row table_content">
         <div class="col" >
           <div class="row table_row mt-1" *ngFor="let label of data">
-            <div class="col-2 bg-primary d-flex text-center align-items-center justify-content-around">
+            <div class="col-2 d-flex bg-dark text-center align-items-center justify-content-around">
               {{label.created_at}}
             </div>
-            <div class="col d-flex text-center">
+            <div class="col d-flex text-center align-items-center">
               {{label.keyLabel}}
             </div>
-            <div class="col d-flex bg-primary text-center align-items-center">
+            <div class="col d-flex bg-dark text-center align-items-center">
               {{label.value}}
             </div>
+<!--            Tools-->
             <div class="col-2 d-flex text-center align-items-center justify-content-around">
-              <button mat-icon-button [cdkCopyToClipboard]="copyRow(label.keyLabel)">
+              <button mat-icon-button (click)="copyRow(label)">
                 <mat-icon>content_copy</mat-icon>
               </button>
               <button mat-icon-button>
