--- a/src/app/function/exchange/exchange.component.html
+++ b/src/app/function/exchange/exchange.component.html
@@ -13,6 +13,7 @@
       <div class="col-2 h-100">
         <div class="row d-flex mt-3 align-items-center justify-content-around">
           <button mat-raised-button class="custom_button" (click)="replaceHtml()">Substituir</button>
+          <button mat-raised-button class="custom_button mt-2" [cdkCopyToClipboard]="responseHtml" [disabled]="responseHtml.length == 0" color="primary">Copiar</button>
         </div>
 
       </div>
