--- a/src/app/function/label-list/label-list.component.html
+++ b/src/app/function/label-list/label-list.component.html
@@ -13,13 +13,14 @@
           Valor
         </div>
         <div class="col-3 d-flex text-center align-items-center justify-content-around">
-          search
+          <input placeholder="Digite o Valor da Label" [formControl]="myControl" matInput>
+          <mat-icon>search</mat-icon>
         </div>
       </div>
 <!--      table content-->
       <div class="row table_content">
         <div class="col" >
-          <div class="row" [ngClass]="{ 'even': index % 2 === 0, 'odd': index % 2 !== 0 }" *ngFor="let label of data">
+          <div class="row" [ngClass]="{ 'even': index % 2 === 0, 'odd': index % 2 !== 0 }" *ngFor="let label of filteredData | async">
             <div class="col-2 d-flex text-center align-items-center justify-content-around">
               {{label.created_at}}
             </div>
