Adicionada alternância de cor pra cada label

--- a/src/app/function/label-list/label-list.component.html
+++ b/src/app/function/label-list/label-list.component.html
@@ -12,33 +12,33 @@
         <div class="col d-flex text-center align-items-center justify-content-around">
           Valor
         </div>
-        <div class="col-3 d-flex text-center align-items-center justify-content-around">
+        <div class="col-2 bg-dark d-flex text-center align-items-center justify-content-around">
           <input placeholder="Digite o Valor da Label" [formControl]="myControl" matInput>
-          <mat-icon>search</mat-icon>
+<!--          <mat-icon>search</mat-icon>-->
         </div>
       </div>
 <!--      table content-->
       <div class="row table_content">
         <div class="col" >
-          <div class="row" [ngClass]="{ 'even': index % 2 === 0, 'odd': index % 2 !== 0 }" *ngFor="let label of filteredData | async">
-            <div class="col-2 d-flex text-center align-items-center justify-content-around">
+          <div class="row" [ngClass]="{ 'table_row_even': index % 2 === 0, 'table_row_odd': index % 2 !== 0 }" *ngFor="let label of filteredData | async; let index = index">
+            <div class="col-2 d-flex align-items-center justify-content-around justify-content-around">
               {{label.created_at}}
             </div>
-            <div class="col d-flex text-center align-items-center">
+            <div class="col d-flex justify-content-around align-items-center">
               {{label.keyLabel}}
             </div>
-            <div class="col d-flex text-center align-items-center">
+            <div class="col d-flex justify-content-around align-items-center">
               {{label.value}}
             </div>
 <!--            Tools-->
             <div class="col-2 d-flex text-center align-items-center justify-content-around">
-              <button mat-icon-button (click)="copyRow(label)">
+              <button mat-icon-button class="d-flex justify-content-around align-items-center" (click)="copyRow(label)">
                 <mat-icon>content_copy</mat-icon>
               </button>
-              <button mat-icon-button>
+              <button mat-icon-button class="d-flex justify-content-around align-items-center">
                 <mat-icon>edit</mat-icon>
               </button>
-              <button mat-icon-button>
+              <button mat-icon-button class="d-flex justify-content-around align-items-center">
                 <mat-icon>delete</mat-icon>
               </button>
             </div>
