--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="d-flex w-100 h-100">
   <app-sidenav></app-sidenav>
+  <app-popup></app-popup>
   <div class="w-100">
       <div class="d-flex w-100 align-items-center p-3 justify-content-between">
         <h2>{{translateFunctionName()}}</h2>
