--- a/src/app/function/label-list/label-list.component.html
+++ b/src/app/function/label-list/label-list.component.html
@@ -35,7 +35,7 @@
               <button mat-icon-button class="d-flex justify-content-around align-items-center" (click)="copyRow(label)">
                 <mat-icon>content_copy</mat-icon>
               </button>
-              <button mat-icon-button class="d-flex justify-content-around align-items-center">
+              <button mat-icon-button class="d-flex justify-content-around align-items-center" (click)="openPopup()">
                 <mat-icon>edit</mat-icon>
               </button>
               <button mat-icon-button class="d-flex justify-content-around align-items-center">
