--- a/src/app/popups/delete/delete.component.html
+++ b/src/app/popups/delete/delete.component.html
@@ -1,3 +1,7 @@
 <div class="component_container">
-
+  <div class="container-fluid">
+    <div class="row bg-dark">
+      teste
+    </div>
+  </div>
 </div>
